--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
