--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-material-menu": "^2.0.0",
@@ -28,7 +29,8 @@
     "react-native-screens": "^3.13.1",
     "react-native-simple-toast": "^1.1.3",
     "react-native-vector-icons": "^9.1.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
