--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/analytics": "^14.7.0",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-firebase/database": "^14.7.0",
     "@react-native-firebase/firestore": "^14.7.0",
+    "@react-native-firebase/messaging": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
@@ -25,6 +27,7 @@
     "react-native": "0.67.4",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-simple-toast": "^1.1.3",
