--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "@react-native-firebase/database": "^14.7.0",
     "@react-native-firebase/firestore": "^14.7.0",
     "@react-native-firebase/messaging": "^14.7.0",
-    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11",
     "zustand": "^3.7.1"
